--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,12 +36,16 @@ jobs:
         docker build -t phuongdinhcute/web_hoa_api:latest .
         docker push phuongdinhcute/web_hoa_api:latest
 
-    - name: 🚀 Redeploy trên Koyeb bằng API
+    - name: 🔧 Cài Koyeb CLI
+      run: |
+        curl -fsSL https://raw.githubusercontent.com/koyeb/koyeb-cli/master/install.sh | sh
+        sudo mv koyeb /usr/local/bin
+
+    - name: 🚀 Redeploy trên Koyeb bằng CLI
       env:
         KOYEB_API_TOKEN: ${{ secrets.KOYEB_API_TOKEN }}
       run: |
-        curl -X POST "https://app.koyeb.com/v1/services/web_hoa_client/deploy" \
-          -H "Authorization: Bearer $KOYEB_API_TOKEN" \
-          -H "Content-Type: application/json"
+        koyeb service redeploy zeroth-rori/web-hoa-api
+
 
 
