--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
       env:
         KOYEB_API_TOKEN: ${{ secrets.KOYEB_API_TOKEN }}
       run: |
+        export PATH=$HOME/.koyeb/bin:$PATH
         koyeb service redeploy zeroth-rori/web-hoa-api
 
 
