--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,18 +40,18 @@ jobs:
       run: |
         curl -fsSL https://raw.githubusercontent.com/koyeb/koyeb-cli/master/install.sh | sh
         export PATH=$HOME/.koyeb/bin:$PATH
+        echo "$HOME/.koyeb/bin" >> $GITHUB_PATH  # Thêm CLI vào PATH
         
     - name: 🔑 Cấu hình Koyeb CLI với API Token
       env:
         KOYEB_API_TOKEN: ${{ secrets.KOYEB_API_TOKEN }}
       run: |
-        koyeb login --token $KOYEB_API_TOKEN
+        koyeb auth login --token $KOYEB_API_TOKEN
 
     - name: 🚀 Redeploy trên Koyeb bằng CLI
       env:
         KOYEB_API_TOKEN: ${{ secrets.KOYEB_API_TOKEN }}
       run: |
-        export PATH=$HOME/.koyeb/bin:$PATH
         koyeb service redeploy zeroth-rori/web-hoa-api
 
 
