--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
       env:
         KOYEB_API_TOKEN: ${{ secrets.KOYEB_API_TOKEN }}
       run: |
-        koyeb auth login --token $KOYEB_API_TOKEN
+        koyeb login --token $KOYEB_API_TOKEN
 
     - name: 🚀 Redeploy trên Koyeb bằng CLI
       env:
