--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,20 +39,19 @@ jobs:
     - name: 🔧 Cài Koyeb CLI
       run: |
         curl -fsSL https://raw.githubusercontent.com/koyeb/koyeb-cli/master/install.sh | sh
-        export PATH=$HOME/.koyeb/bin:$PATH
-        echo "$HOME/.koyeb/bin" >> $GITHUB_PATH  # Thêm CLI vào PATH
-        
-    - name: 🔑 Cấu hình Koyeb CLI với API Token
+        echo "$HOME/.koyeb/bin" >> $GITHUB_PATH  # Đưa CLI vào path
+
+    - name: ⚙️ Tạo config file cho Koyeb CLI
       env:
         KOYEB_API_TOKEN: ${{ secrets.KOYEB_API_TOKEN }}
       run: |
-        koyeb login --token $KOYEB_API_TOKEN
+        mkdir -p $HOME
+        echo "token: $KOYEB_API_TOKEN" > $HOME/.koyeb.yaml
 
     - name: 🚀 Redeploy trên Koyeb bằng CLI
-      env:
-        KOYEB_API_TOKEN: ${{ secrets.KOYEB_API_TOKEN }}
       run: |
         koyeb service redeploy zeroth-rori/web-hoa-api
+
 
 
 
